Bug 31443 - [Bisected] Black login textbox at gdm prompt
Summary: [Bisected] Black login textbox at gdm prompt
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-07 05:20 UTC by Cyril Brulebois
Modified: 2010-11-07 07:10 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Cyril Brulebois 2010-11-07 05:20:24 UTC
With kernel 2.6.32 from Debian (many DRM fixes in there).
With libdrm 2.4.22 + 057fab33 + 36245771, so that -intel builds.
Hardware: 00:02.0 VGA compatible controller: Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller (rev 07) (prog-if 00 [VGA controller])

The login textbox is a black rectangle instead of a white one, with no (visible) cursor. It seems like logging in leads to other rendering issues, but I'm not sure it's worth trying to describe them right now.


The following commit introduces the issue:

commit 5bed685f765671d63642b24e17abd70579c40ddf
Author: Zou Nan hai <nanhai.zou@intel.com>
Date:   Mon Nov 1 13:23:35 2010 +0800

    add BLT ring support
    
    gen6+ platform has a BLT engine with seperate
    command streamer to support BLT commands.
    
    Signed-off-by: Zou Nan hai <nanhai.zou@intel.com>
    [ickle: merge trivial conflict]
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 1 Chris Wilson 2010-11-07 05:46:58 UTC
Don't see the issue locally. Ostensibly that patch should only affect gen6.

However, it does invoke mrb_exec2 with flags=I915_EXEC_RENDER. Is this being rejected by the kernel? Xorg.log would be full of batch buffer failed: EINVAL and maybe even dmesg would mention userspace doing something it didn't expect. It all depends upon your execbuffer code in i915.ko.
Comment 2 Chris Wilson 2010-11-07 07:00:34 UTC
Tested on the wrong machine obviously:

commit 49447a9b957047db2549b8a929e763bbd87808ba
Author: Albert Damen <albrt@gmx.net>
Date:   Sun Nov 7 15:54:32 2010 +0100

    intel: initialize bufmgr.bo_mrb_exec unconditionally
    
    If bufmgr.bo_mrb_exec is not set, drm_intel_bo_mrb_exec returns ENODEV
    even though drm_intel_gem_bo_mrb_exec2 will work fine for the RENDER ring.
    Fixes xf86-video-intel after commit 'add BLT ring support' (5bed685f76)
    with kernels without BSD or BLT ring support (2.6.34 and before).
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=31443
    Signed-off-by: Albert Damen <albrt@gmx.net>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Cyril Brulebois 2010-11-07 07:10:18 UTC
Fixed indeed, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.